Fixing alignment of profession

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 /* =================================== */
 
 #profession{
-  margin-right: 16px;
+  margin-right: 12px;
 }
 body {
   background-color: #fff;
